# GraduationDesign

./: .gitignore
src/: README.md
src/explorefzh/: CMakeLists.txt  package.xml
src/explorefzh/include/: active_explore.hpp  costmap_client.h  costmap_tools.h  dbscan.h  search_frontier.hpp
src/explorefzh/launch/: explorefzh.launch
src/explorefzh/msg/: explore_data.msg
src/explorefzh/src/: active_explore.cpp  costmap_client.cpp  dbscan.cpp  experiment.cpp  explore_data.cpp  search_frontier.cpp
src/myrobot_description/: CMakeLists.txt  package.xml
src/myrobot_description/launch/: display_gazebo.launch  display_urdf.launch
src/myrobot_description/urdf/: robot1_base.urdf
src/myrobot_description/xacro/: robot.xacro  robot_base.xacro
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/config/: dwa_planner_params.yaml  fzh_cartographer.lua  local_costmap_params.yaml
src/robot_simulation/launch/: cartographer.launch  gazebo.launch  gmapping.launch  move_base.launch  navigation_mapping.launch  simulation_stage.launch  wpr_slam_temp.launch
src/robot_simulation/models/new_419/: model.config  model.sdf
src/robot_simulation/models/similar_home/: model.config  model.sdf
src/robot_simulation/rviz/: simulation.rviz
src/robot_simulation/src/: set_goal.cpp
src/robot_simulation/urdf/: body_gazebo.xacro  robotv1.xacro
src/robot_simulation/worlds/: house.world  similar_home.world  similar_home_new_419.world  world1.world  world2.world  world3.world  world4.world
src/testfzh_pkg/: CMakeLists.txt  package.xml
src/testfzh_pkg/src/: testfzh_node.cpp
src/wpr_simulation/launch/: wpb_demo_nav.launch
src/wpr_simulation/models/: wpb_home.model
